--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=3000
 JWT_SECRET=TaskEventUser12@
-INVITE_EXPIRATION=10m
-JWT_TOKEN_EXPIRATION=1h
+INVITE_EXPIRATION=1d
+JWT_TOKEN_EXPIRATION=1d
 DATABASE_URL=postgresql://postgres:postgres@localhost:5432/taskinvitesdb
